functional dye station

--- a/src/main/resources/assets/easydyes/lang/en_us.json
+++ b/src/main/resources/assets/easydyes/lang/en_us.json
@@ -3,5 +3,5 @@
 
   "item.easydyes.normalitem": "Item",
 
-  "block.easydyes.normalblock": "Block"
+  "block.easydyes.dye_station": "Dye Station"
 }
