lucky color block back & proper custom recipes

--- a/src/main/resources/assets/easydyes/lang/en_us.json
+++ b/src/main/resources/assets/easydyes/lang/en_us.json
@@ -1,7 +1,8 @@
 {
-  "itemGroup.easydyes": "easydyes Content",
+  "itemGroup.easydyes": "Easy Dyes Content",
 
-  "item.easydyes.normalitem": "Item",
+  "item.easydyes.mixed_dye": "Mixed Dye",
 
-  "block.easydyes.dye_station": "Dye Station"
+  "block.easydyes.dye_station": "Dye Station",
+  "block.easydyes.lucky_color_block": "Lucky Color Block"
 }
